syntax = "proto3";

import "common_proto/common.proto";

message RouteMsgBody
{
  bytes body = 1;
  string service = 2;
  string method = 3;
  NodeInfo node_info = 4;
  uint64 id = 5;
}

message RouteMsgStringRequest
{
  repeated RouteMsgBody msg_list = 1;
  uint64 session_id = 2;  
}

message RouteMsgStringResponse
{
  repeated RouteMsgBody msg_list = 1;
  uint64 session_id = 2;  
}

message RoutePlayerMsgStringRequest
{
  bytes body = 1;
  repeated NodeInfo node_list = 2;
  PlayerMessageExtern player_ex = 3;
}

message RoutePlayerMsgStringResponse
{
  bytes body = 1;
  repeated NodeInfo node_list = 2;
  PlayerMessageExtern player_ex = 3;
}


